--- a/src/Styles/about.css
+++ b/src/Styles/about.css
@@ -2,6 +2,10 @@
     display:flex;
     flex-direction: column;
     padding-inline: 8rem;
-    margin-left: 60px;
+    
  
+}
+
+.wrapper-about{
+    width: 100%;
 }
