--- a/src/Components/Carrousel/Carrousel.css
+++ b/src/Components/Carrousel/Carrousel.css
@@ -25,6 +25,7 @@
     height: 100%;
     border-radius:25px;
     box-shadow: rgb(149 157 165 / 40%) 0px 10px 25px;
+    max-width: 100%;
 }
 
 .img-banner .show{
@@ -71,4 +72,31 @@
     font-size: 18px;
     padding: 0.5rem 1rem;
 
+}
+
+/* Media Query pour les appareils mobiles */
+@media (max-width: 768px) {
+    .img-banner {
+        margin-bottom: 15px;
+    }
+  
+    .image_container {
+        height: 300px;
+    }
+  
+    .img-banner img {
+        border-radius: 15px;
+       
+    }
+  
+    .btn-next,
+    .btn-previous {
+        width: 3rem;
+        font-size: 2rem;
+    }
+  
+    .slide-counter {
+        bottom: 15px;
+        font-size: 16px;
+    }
 }
