--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -37,14 +37,15 @@
 }
 
 @media only screen and (max-width: 1092px ) {
-        .navbar_elements{
-            justify-content: space-between;
-           width: 35%;
-        
-        }
+    .navbar_elements{
+        justify-content: space-between;
+       width: 35%;
+    
+    }
 }
 
-@media screen and (width <= 769px ) {
+
+@media screen and (max-width: 769px ) {
     .navbar{
         margin-top: 15px;
         padding-inline: 5px;
@@ -65,3 +66,4 @@
         text-transform: uppercase;    }
 
 }
+
