--- a/src/Styles/Appartement.css
+++ b/src/Styles/Appartement.css
@@ -16,10 +16,30 @@
     flex-basis: 50%;
     display: flex;
     gap: 76px;
+    max-width: 100%;
 }
 
 .wrapper-appart {
     width: 250%;
     padding: 0;
     justify-content: space-between;
+}
+
+
+/* Media Query pour les appareils mobiles */
+@media (max-width: 768px) {
+    .appartements-card {
+        padding: 0.5rem;
+        margin-top: 20px;
+    }
+    
+    .wrapper-description-global {
+        gap: 10px;
+        display: block;
+    }
+
+    .wrapper-appart {
+        margin-top: 16px;
+        width: 100%;
+    }
 }
