--- a/src/Components/Gallery/Gallery.css
+++ b/src/Components/Gallery/Gallery.css
@@ -3,13 +3,12 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 25px ;
-    padding-top: 15px;
     background-color: #F7F7F7 ;
     border-radius: 25px;
     min-height: 400px;
     margin: 3rem;
-    padding-left: 15px;
-    padding-right: 15px;
+    row-gap: 50px;
+    padding: 15px;
     
 }
 
