--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -12,7 +12,8 @@ h3, h1 {
 }
 
 body {
-    margin: 0;
+    margin: 0 auto;
+    max-width: 1750px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
       sans-serif;
